--- a/news.html
+++ b/news.html
@@ -58,6 +58,18 @@
             font-weight: bold;
         }
 
+        .subTextImg {
+            font-size: 1rem;
+        }
+
+        img {
+            max-width: 100%;
+        }
+
+        .divImg{
+            text-align: center;
+        }
+
         a {
             text-decoration: none;
             word-break: break-all;
@@ -111,7 +123,7 @@
             /* padding 包含在寬度內 */
             box-sizing: border-box;
             /* 字體大小 */
-            font-size: 0.99rem;
+            font-size: 1rem;
             /* 輕微陰影提升可讀性 */
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
         }
@@ -136,7 +148,7 @@
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
             z-index: 999;
             transition: background-color 0.2s ease;
-            font-size: 2rem;
+            font-size: 3rem;
         }
 
         .floating-home-btn:hover {
@@ -310,7 +322,7 @@
         <div class="sideLeft textCenter">
             <p>Update Time</p>
             <p>2025/07/05</p>
-            <p>02:50:12</p>
+            <p>04:27:53</p>
         </div>
         <div class="center title">
             <h1>MOE releases guidelines for school cellphone use</h1>
@@ -340,9 +352,16 @@
                 <p>Schools or individual classes would manage rules, but with details subject to approval by school
                     boards.
                 </p>
-                <p>A high-school student looks at a cellphone in front of the entrance of a high school in New Taipei
-                    City
-                    undated photograph.</p>
+                <div class="subTextImg divImg">
+                    <img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
+                    <p>A high-school student looks at a cellphone
+                        in front of the entrance of a high school in New Taipei City
+                        undated photograph.
+                    </p>
+                    <p>
+                        Photo: Tien Yu-hua, Taipei Times
+                    </p>
+                </div>
                 <p>As students are minors, parents and guardians would still bear legal responsibility for their
                     behavior
                     and safety, the guidelines say, adding that students would need permission from a legal guardian to
