--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         }
 
         .side {
-            width: 10%;
+            width: 7.5%;
         }
 
         .center {
-            width: 80%;
+            width: 85%;
         }
 
         .title {
@@ -38,7 +38,7 @@
         td {
             font-family: "Arial";
             text-align: center;
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
 
         img {
@@ -81,33 +81,48 @@
                 </head>
                 <tbody>
                     <tr>
-                        <td><p>2025/05/22</p></td>
+                        <td class="leftTD">
+                            <p>2025/05/22</p>
+                        </td>
+                        <td class="rightTD">
+
+                        </td>
+                    </tr>
+                     <tr>
+                        <td><img src="https://www.taipeitimes.com/images/2025/07/06/P09-250706-318.jpg">
+                        </td>
+                        <td><a href="20250522001.html">Japan anxious for farmers to produce more rice</a></td>
                     </tr>
                     <tr>
-                        <td class="leftTD"><img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
+                        <td class="leftTD">
+                            <p>2025/05/22</p>
                         </td>
-                        <td class="rightTD"><a href="https://micante0701.github.io/news/20250522001.html"
-                                target="_blank">Ministry mulls
+                        <td class="rightTD">
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
+                        </td>
+                        <td><a href="https://micante0701.github.io/news/20250522001.html">Ministry mulls
                                 elderly driver regulations</a></td>
                     </tr>
                     <tr>
-                        <td class="leftTD"><img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg">
+                        <td><img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg">
                         </td>
-                        <td class="rightTD"><a href="https://micante0701.github.io/news/20250522002.html"
-                                target="_blank">Bull racing in
+                        <td><a href="https://micante0701.github.io/news/20250522002.html">Bull racing in
                                 Pakistan puts pride of riders on the line</a></td>
                     </tr>
                     <tr>
-                        <td class="leftTD"><img src="https://www.taipeitimes.com/images/2025/05/22/p03-250522-603.jpg"
+                        <td><img src="https://www.taipeitimes.com/images/2025/05/22/p03-250522-603.jpg"
                                 class="img-fluid me-3">
                         </td>
-                        <td class="rightTD"><a href="https://micante0701.github.io/news/20250522003.html"
-                                target="_blank">Ministry mulls
+                        <td><a href="https://micante0701.github.io/news/20250522003.html">Ministry mulls
                                 elderly driver regulations</a></td>
                     </tr>
                     <tr>
-                        <td class="col-25"></td>
-                        <td class="col-75"></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
@@ -123,54 +138,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col side mt-5">
-                <p class="toNewsURL">2025/05/22</p>
 
-                <div class="d-flex align-items-center mb-3 toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg" class="img-fluid me-3">
-                    <a href="https://micante0701.github.io/news/20250522001.html" target="_blank">Ministry mulls elderly
-                        driver regulations</a>
-                </div>
-
-                <div class="d-flex align-items-center mb-3 toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg" class="img-fluid me-3">
-                    <a href="https://micante0701.github.io/news/20250522002.html" target="_blank">Bull racing in
-                        Pakistan puts pride of riders on the line</a>
-                </div>
-
-                <div class="d-flex align-items-center mb-3 toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p03-250522-603.jpg" class="img-fluid me-3">
-                    <a href="https://micante0701.github.io/news/20250522003.html" target="_blank">Ministry mulls elderly
-                        driver regulations</a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col side mt-5">
-                <p class="toNewsURL">2025/05/22</p>
-                <p class="toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
-                    <a href="https://micante0701.github.io/news/20250522001.html" target="_blank">Ministry mulls elderly
-                        driver regulations</a>
-                </p>
-                <p class="toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg">
-                    <a href="https://micante0701.github.io/news/20250522002.html" target="_blank">Bull
-                        racing in Pakistan puts pride of riders on the line</a>
-                </p>
-                <p class="toNewsURL">
-                    <img src="https://www.taipeitimes.com/images/2025/05/22/p03-250522-603.jpg">
-                    <a href="https://micante0701.github.io/news/20250522003.html" target="_blank">Ministry mulls elderly
-                        driver regulations</a>
-                </p>
-            </div>
-        </div>
-    </div> -->
 
 </body>
 
