--- a/20250522002.html
+++ b/20250522002.html
@@ -226,7 +226,7 @@
 </head>
 
 <body>
-    <a href="https://micante0701.github.io/news" class="floating-home-btn">🏠</a>
+    <a href="index.html" class="floating-home-btn">🏠</a>
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
