--- a/20250705001.html
+++ b/20250705001.html
@@ -240,7 +240,7 @@
 </head>
 
 <body>
-    <a href="news/index.html" class="floating-home-btn">🏠</a>
+    <a href="index.html" class="floating-home-btn">🏠</a>
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
