--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                      <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/07/06/P09-250706-318.jpg">
                         </td>
-                        <td><a href="20250522001.html">Japan anxious for farmers to produce more rice</a></td>
+                        <td><a href="20250705001.html">Japan anxious for farmers to produce more rice</a></td>
                     </tr>
                     <tr>
                         <td class="leftTD">
@@ -104,20 +104,20 @@
                     <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
                         </td>
-                        <td><a href="https://micante0701.github.io/news/20250522001.html">Ministry mulls
+                        <td><a href="20250522001.html">Ministry mulls
                                 elderly driver regulations</a></td>
                     </tr>
                     <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg">
                         </td>
-                        <td><a href="https://micante0701.github.io/news/20250522002.html">Bull racing in
+                        <td><a href="20250522002.html">Bull racing in
                                 Pakistan puts pride of riders on the line</a></td>
                     </tr>
                     <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/05/22/p03-250522-603.jpg"
                                 class="img-fluid me-3">
                         </td>
-                        <td><a href="https://micante0701.github.io/news/20250522003.html">Ministry mulls
+                        <td><a href="20250522003.html">Ministry mulls
                                 elderly driver regulations</a></td>
                     </tr>
                     <tr>
