--- a/20250522003.html
+++ b/20250522003.html
@@ -249,7 +249,7 @@
 </head>
 
 <body>
-    <a href="https://micante0701.github.io/news" class="floating-home-btn">🏠</a>
+    <a href="index.html" class="floating-home-btn">🏠</a>
     <div class="container">
         <div class="sideLeft textCenter">
             <p>Update Time</p>
