--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         td {
             font-family: "Arial";
             text-align: center;
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
 
         img {
@@ -51,6 +51,10 @@
 
         .rightTD {
             width: 80%;
+        }
+
+        table{
+            padding: 2px;
         }
 
         a {
