--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             font-size: 5rem;
             font-weight: bold;
             font-family: "Arial";
+            text-align: center;
+            color: red;
         }
 
         .textCenter {
@@ -38,7 +40,7 @@
         td {
             font-family: "Arial";
             text-align: center;
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
 
         img {
@@ -133,12 +135,10 @@
         </div>
         <div class="side"></div>
     </div>
-
-
     <div class="container">
         <div class="row">
             <div class="col side mt-5">
-                <p class="fontSizeTitle">News</p>
+                <p class="fontSizeTitle"></p>
             </div>
         </div>
     </div>
