--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             width: 80%;
         }
 
-        table{
+        table {
             padding: 2px;
         }
 
@@ -70,7 +70,11 @@
 
 <body>
     <div class="container">
-        <div class="side"></div>
+        <div class="side">
+            <p>Update</p>
+            <p>2025/07/06</p>
+            <p>04:15:01</p>
+        </div>
         <div class="center title">News</div>
         <div class="side"></div>
     </div>
@@ -94,7 +98,7 @@
 
                         </td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/07/06/P09-250706-318.jpg">
                         </td>
                         <td><a href="20250705001.html">Japan anxious for farmers to produce more rice</a></td>
