--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             font-family: "Arial";
             text-align: center;
             color: red;
+            padding: 5pt;
         }
 
         .textCenter {
@@ -73,7 +74,7 @@
         <div class="side">
             <p>Update</p>
             <p>2025/07/06</p>
-            <p>04:15:01</p>
+            <p>04:16:19</p>
         </div>
         <div class="center title">News</div>
         <div class="side"></div>
