--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             font-family: "Arial";
             text-align: center;
             color: red;
-            padding: 20pt;
+            padding: 3rem;
         }
 
         .textCenter {
@@ -74,7 +74,7 @@
         <div class="side">
             <p>Update</p>
             <p>2025/07/06</p>
-            <p>04:17:59</p>
+            <p>04:28:23</p>
         </div>
         <div class="center title">News</div>
         <div class="side"></div>
