--- a/20250706001.html
+++ b/20250706001.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="revised" content="2025/07/03">
-    <title>MOE releases guidelines for school cellphone use</title>
+    <title>Japan anxious for farmers to produce more rice</title>
 
     <link rel="stylesheet" href="css/newsPage.css">
 
@@ -34,7 +34,11 @@
                 approach: ["approach", "approaches"],
                 variety: ["variety", "varieties"],
                 roadmap: ["roadmap", "roadmaps"],
-                consumer: ["consumer", "consumers"]
+                limitation: ["limitation", "limitations"],
+                expose: ["expose", "exposes"],
+                consumer: ["consumer", "consumers"],
+                announce:["announced","announce"],
+                envisage:["envisaging"]
             };
 
             const definitions = {
@@ -63,7 +67,7 @@
                 announce: "v. 公布",
                 prepare: "v. 準備",
                 reversal: "n. 逆轉",
-                envisage: "v. 想像 / 設想",
+                envisage: "v. 設想/展望",
                 bountiful: "adj. 豐富的",
                 output: "n. 產出",
                 secure: "v. 確保",
@@ -196,6 +200,7 @@
                 fuel: "n. 燃料",
                 production: "n. 生產",
                 cost: "n. 成本",
+                encouraged: "v. 助長/刺激/促進；鼓勵",
                 "leads to": "導致"
             };
 
@@ -266,9 +271,15 @@
                     By Kaori Kaneko / Reuters, JOETSU, Japan
                 </p>
                 <!-- 正文開始 -->
-                <p>For more than half a century, the Japanese government has encouraged its rice farmers to grow less of the crop so that prices of the national staple grain remained relatively high and steady.</p>
-                <p>Now, under an ambitious agricultural policy announced this year, Tokyo is preparing for a reversal, envisaging a future of bountiful output that would secure the country's food security without sending prices into freefall and hurting its politically influential farmers.</p>
-                <p>The new direction has taken on an unexpected urgency as Japanese grapple with a shortage of the all-important staple, which has prompted a historic spike in prices, a flood of imports and interest from US President Donald Trump, who has renewed pressure on Japan to buy US rice as part of the allies' elusive trade deal.</p>
+                <p>For more than half a century, the Japanese government has encouraged its rice farmers to grow less of
+                    the crop so that prices of the national staple grain remained relatively high and steady.</p>
+                <p>Now, under an ambitious agricultural policy announced this year, Tokyo is preparing for a reversal,
+                    envisaging a future of bountiful output that would secure the country's food security without
+                    sending prices into freefall and hurting its politically influential farmers.</p>
+                <p>The new direction has taken on an unexpected urgency as Japanese grapple with a shortage of the
+                    all-important staple, which has prompted a historic spike in prices, a flood of imports and interest
+                    from US President Donald Trump, who has renewed pressure on Japan to buy US rice as part of the
+                    allies' elusive trade deal.</p>
                 <!-- 圖片 -->
                 <div class="subTextImg divImg">
                     <img src="https://www.taipeitimes.com/images/2025/07/06/P09-250706-318.jpg">
