--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             font-family: "Arial";
             text-align: center;
             color: red;
-            padding: 3rem;
+            padding: 2rem;
         }
 
         .textCenter {
@@ -77,7 +77,7 @@
             <p>04:28:23</p>
         </div>
         <div class="center title">News</div>
-        <div class="side"></div>
+        <div class="side"><a href="https://micante0701.github.io/resto/">其他作品</a></div>
     </div>
     <div class="container">
         <div class="side"></div>
