--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="side">
             <p>Update</p>
             <p>2025/07/06</p>
-            <p>04:28:23</p>
+            <p>04:58:42</p>
         </div>
         <div class="center title">News</div>
         <div class="side"><a href="https://micante0701.github.io/resto/">其他作品</a></div>
@@ -115,8 +115,7 @@
                     <tr>
                         <td><img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg">
                         </td>
-                        <td><a href="20250522001.html">Ministry mulls
-                                elderly driver regulations</a></td>
+                        <td><a href="20250522001.html">MOE releases guidelines for school cellphone use</a></td>
                     </tr>
                     <p> </p>
                     <tr>
