--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@
 
     <!-- 行動裝置選單 -->
     <div class="mobile-menu" id="mobileMenu">
-        <div class="mb-4">
+        <!-- <div class="mb-4">
             <input type="text" placeholder="搜尋新聞..."
                 class="bg-white/70 rounded-full py-2 px-4 pl-10 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:bg-white transition-all duration-300 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 absolute left-7 top-6" fill="none"
@@ -1586,7 +1586,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
             </svg>
-        </div>
+        </div> -->
         <nav>
             <ul>
                 <li><a href="https://micante0701.github.io/news" class="block py-2 px-4 hover:bg-white/50 rounded-lg font-medium text-blue-600">HOME</a>
