--- a/Test.html
+++ b/Test.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="revised" content="2025/07/11">
     <title>測試頁</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
        
 
