--- a/Test.html
+++ b/Test.html
@@ -11,13 +11,14 @@
 
     </script>
     <style>
-
-
+        body{
+            font-size: 1rem;
+        }
     </style>
 </head>
 
 <body>
-    <div>Update: A</div>
+    <div>Update: B</div>
     <div class="textStyle">
                 <p class="subTitle">BALANCING ACT: While cellphones can help accelerate learning, schools must find a
                     balance to avoid
