--- a/Test.html
+++ b/Test.html
@@ -14,11 +14,14 @@
         body{
             font-size: 1rem;
         }
+        img{
+            width: 100%;
+        }
     </style>
 </head>
 
 <body>
-    <div>Update: B</div>
+    <div>Update: C</div>
     <div class="textStyle">
                 <p class="subTitle">BALANCING ACT: While cellphones can help accelerate learning, schools must find a
                     balance to avoid
