--- a/Test.html
+++ b/Test.html
@@ -12,7 +12,7 @@
     </script>
     <style>
         body{
-            
+            font-size: 1.5rem;
         }
         img{
             width: 100%;
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div>Update: D</div>
+    <div>Update: E</div>
     <div class="textStyle">
                 <p class="subTitle">BALANCING ACT: While cellphones can help accelerate learning, schools must find a
                     balance to avoid
