--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@
                         <div
                             class="h-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
                             <img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg"
-                                class="carouselPic">
+                                class="carouselPic" style="height: 100%;">
                         </div>
                         <div class="carousel-content">
                             <!-- <span class="category-badge bg-blue-600 mb-3">科技</span> -->
