--- a/20240118001.html
+++ b/20240118001.html
@@ -7,6 +7,7 @@
     <meta name="revised" content="2025/12/06">
     <title>Una historia de amor a través del estrecho de Formosa</title>
     <link rel="stylesheet" href="css/newsPage2.css">
+    <link rel="stylesheet" href="css/newsPage2m.css" media="screen and (max-width: 768px)">
     <script>
         const variants = {
             amor: ["amor", "amores"],
