--- a/20240118001.html
+++ b/20240118001.html
@@ -30,6 +30,10 @@
             isla: ["isla", "islas"],
             idioma: ["idioma", "idiomas"],
             pareja: ["pareja", "parejas"],
+            propuesta: ["propuesta", "propuestas"],
+            calle: ["calle", "calles"],
+            momento: ["momento", "momentos"],
+            destino: ["destino", "destinos"],
             proponer: ["proponer", "propuso", "proponen", "propuso"],
             continuar: ["continuar", "continúa", "continuaron"],
             invadir: ["invadir", "invadió", "invaden"],
@@ -52,8 +56,13 @@
             turístico: "adj. 旅遊的",
             capital: "n. 首都",
             ciudad: "n. 城市",
+            corazón: "n. 心臟/中心",
+            monte: "n. 山丘",
+            vista: "n. 景色",
+            plano: "n. 畫面/平面",
             rascacielos: "n. 摩天大樓",
             isla: "n. 島嶼",
+            postal: "n. 明信片/照片",
             álbum: "n. 相簿",
             viaje: "n. 旅行",
             independencia: "n. 獨立",
@@ -61,42 +70,53 @@
             ejército: "n. 軍隊",
             invadir: "v. 入侵",
             pareja: "n. 情侶/伴侶",
+            ciudad: "n. 城市",
             provincia: "n. 省份",
             semana: "n. 星期/週",
+            casa: "n. 家",
             elección: "n. 選舉",
             presidencial: "adj. 總統的",
             fiesta: "n. 節慶/派對",
             democracia: "n. 民主",
+            experiencia: "n. 經驗",
             país: "n. 國家",
             gobernante: "n. 統治者/領導人",
             pasión: "n. 熱情",
             ganador: "n. 贏家",
             partido: "n. 政黨",
-            progresista: "adj. 進步的",
+            festival: "n. 節慶/音樂會",
             líder: "n. 領袖",
             continente: "n. 大陸",
-            dirigir: "v. 管理/領導",
             persona: "n. 人",
             etnia: "n. 族群",
             sistema: "n. 系統",
-            caótico: "adj. 混亂的",
+            país: "n. 國家",
             oportunidad: "n. 機會",
             guerra: "n. 戰爭",
+            comida: "n. 食物",
             idioma: "n. 語言",
             camino: "n. 路/道路",
+            relación: "n. 關係",
             posición: "n. 立場/位置",
             gobierno: "n. 政府",
             autonomía: "n. 自治",
             supervisión: "n. 監督",
-            proponer: "v. 提議",
+            país: "n. 國家",
+            propuesta: "n. 提議",
             anexión: "n. 併吞/合併",
             modelo: "n. 模式",
             régimen: "n. 政權",
             autoritarismo: "n. 威權主義",
+            calle: "n. 街道",
             libertad: "n. 自由",
             fracaso: "n. 失敗",
+            momento: "n. 時刻",
             destino: "n. 命運/前途",
+            "status quo": "(拉丁語詞彙)n. 現狀；指的是當前存在的狀態",
             soberanía: "n. 主權",
+            democracia: "n. 民主",
+            historia: "n. 故事/歷史",
+            amor: "n. 愛情",
             continuar: "v. 繼續"
         };
     </script>
@@ -113,7 +133,7 @@
             <p>03:39:05</p>
         </div>
         <div class="center title">
-            <h1>MOE releases guidelines for school cellphone use</h1>
+            <h1>Una historia de amor a través del estrecho de Formosa</h1>
         </div>
         <div class="sideRight"></div>
     </div>
