--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micante News</title>
+    <title>環球視野 | 高端新聞平台</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&amp;display=swap"
         rel="stylesheet">
@@ -1527,7 +1527,6 @@
     <style>
         .carouselPic {
             width: 100%;
-            height: 100%;
         }
     </style>
 </head>
@@ -1543,9 +1542,9 @@
                         Micante News
                     </div>
                     <div class="hidden md:flex space-x-1">
-                        <a href="https://micante0701.github.io/news" class="nav-link active">HOME</a>
-                        <a href="https://micante0701.github.io/resto" class="nav-link">其他作品</a>
-                        <!--<a href="#" class="nav-link">財經</a>
+                        <!--<a href="#" class="nav-link active">HOME</a>
+                         <a href="#" class="nav-link">國際</a>
+                        <a href="#" class="nav-link">財經</a>
                         <a href="#" class="nav-link">科技</a>
                         <a href="#" class="nav-link">文化</a>
                         <a href="#" class="nav-link">觀點</a> -->
@@ -1578,7 +1577,7 @@
 
     <!-- 行動裝置選單 -->
     <div class="mobile-menu" id="mobileMenu">
-        <!-- <div class="mb-4">
+        <div class="mb-4">
             <input type="text" placeholder="搜尋新聞..."
                 class="bg-white/70 rounded-full py-2 px-4 pl-10 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:bg-white transition-all duration-300 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 absolute left-7 top-6" fill="none"
@@ -1586,12 +1585,12 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
             </svg>
-        </div> -->
+        </div>
         <nav>
             <ul>
-                <li><a href="https://micante0701.github.io/news" class="block py-2 px-4 hover:bg-white/50 rounded-lg font-medium text-blue-600">HOME</a>
+                <li><a href="#" class="block py-2 px-4 hover:bg-white/50 rounded-lg font-medium text-blue-600">HOME</a>
                 </li>
-                <li><a href="https://micante0701.github.io/resto" class="block py-2 px-4 hover:bg-white/50 rounded-lg">其他作品</a></li>
+                <li><a href="#" class="block py-2 px-4 hover:bg-white/50 rounded-lg">Other</a></li>
                 <!--                 <li><a href="#" class="block py-2 px-4 hover:bg-white/50 rounded-lg">財經</a></li>
                 <li><a href="#" class="block py-2 px-4 hover:bg-white/50 rounded-lg">科技</a></li>
                 <li><a href="#" class="block py-2 px-4 hover:bg-white/50 rounded-lg">文化</a></li>
@@ -1621,13 +1620,26 @@
                     <div class="carousel-slide h-full">
                         <div
                             class="h-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                            <img src="https://phantom-elmundo.unidadeditorial.es/6b9bc181b61060b6639087ed0059d7dd/resize/920/f/webp/assets/multimedia/imagenes/2024/01/17/17055021129966.jpg"
+                                class="carouselPic" style="height: 100%;">
+                        </div>
+                        <div class="carousel-content">
+                            <!-- <span class="category-badge bg-blue-600 mb-3">科技</span> -->
+                            <h2 class="text-3xl md:text-4xl font-bold mb-3" onclick="a(20240118001)">Una historia de amor a través del estrecho de Formosa</h2>
+                            <p class="text-lg opacity-90 mb-4 max-w-3xl">
+                                Una historia de amor a través del estrecho de Formosa...</p>
+                            <!-- <button class="btn-primary">閱讀全文</button> -->
+                        </div>
+                    </div>
+                    <div class="carousel-slide h-full">
+                        <div
+                            class="h-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
                             <img src="https://www.taipeitimes.com/images/2025/05/22/p01-250522-006.jpg"
                                 class="carouselPic" style="height: 100%;">
                         </div>
                         <div class="carousel-content">
                             <!-- <span class="category-badge bg-blue-600 mb-3">科技</span> -->
-                            <h2 class="text-3xl md:text-4xl font-bold mb-3" onclick="a(20250522001)">MOE releases
-                                guidelines for school cellphone
+                            <h2 class="text-3xl md:text-4xl font-bold mb-3" onclick="a(20250522001)">MOE releases guidelines for school cellphone
                                 use</h2>
                             <p class="text-lg opacity-90 mb-4 max-w-3xl">
                                 The Ministry of Education (MOE) yesterday announced new draft guidelines for cellphone
@@ -1638,13 +1650,11 @@
                     <div class="carousel-slide h-full">
                         <div
                             class="h-full bg-gradient-to-r from-green-500 to-teal-600 flex items-center justify-center">
-                            <img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg"
-                                class="carouselPic">
+                            <img src="https://www.taipeitimes.com/images/2025/05/22/p06-250522-308.jpg" class="carouselPic">
                         </div>
                         <div class="carousel-content">
                             <!-- <span class="category-badge bg-green-600 mb-3">環境</span> -->
-                            <h2 class="text-3xl md:text-4xl font-bold mb-3" onclick="a(20250522002)">Bull racing in
-                                Pakistan puts pride of riders
+                            <h2 class="text-3xl md:text-4xl font-bold mb-3" onclick="a(20250522002)">Bull racing in Pakistan puts pride of riders
                                 on the line</h2>
                             <p class="text-lg opacity-90 mb-4 max-w-3xl">
                                 Bulls are yoked together by thick wooden frames in a sun-scorched field of rural
@@ -1681,6 +1691,35 @@
         <section class="mb-12">
             <h2 class="section-title text-2xl md:text-3xl">News</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+                <div class="news-card overflow-hidden">
+                    <div class="h-48 bg-blue-100 relative overflow-hidden">
+                        <div
+                            class="absolute inset-0 bg-gradient-to-br from-blue-400 to-blue-600 flex items-center justify-center">
+                            <img src="https://phantom-elmundo.unidadeditorial.es/6b9bc181b61060b6639087ed0059d7dd/resize/920/f/webp/assets/multimedia/imagenes/2024/01/17/17055021129966.jpg"
+                                class="carouselPic">
+                        </div>
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-xl font-bold mb-3">Una historia de amor a través del estrecho de Formosa</h3>
+                        <p class="text-gray-600 mb-4">The Ministry of Education (MOE) yesterday announced new draft
+                            guidelines for cellphone
+                            use...</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-gray-500 text-sm">2024/01/18</span>
+                            <a href="20240118001.html"
+                                class="text-blue-600 hover:underline font-medium flex items-center">
+                                More
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M9 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="news-card overflow-hidden">
                     <div class="h-48 bg-blue-100 relative overflow-hidden">
                         <div
@@ -1778,8 +1817,7 @@
                     </div>
                     <div class="p-5">
                         <h3 class="text-xl font-bold mb-3">Japan anxious for farmers to produce more rice</h3>
-                        <p class="text-gray-600 mb-4">For more than half a century, the Japanese government has
-                            encouraged its rice farmers to...</p>
+                        <p class="text-gray-600 mb-4">For more than half a century, the Japanese government has encouraged its rice farmers to...</p>
                         <div class="flex justify-between items-center">
                             <span class="text-gray-500 text-sm">2025/07/06</span>
 
