--- a/20240118001.html
+++ b/20240118001.html
@@ -38,7 +38,11 @@
             continuar: ["continuar", "continúa", "continuaron"],
             invadir: ["invadir", "invadió", "invaden"],
             respetar: ["respetar", "respetan", "respetó"],
-            dirigir: ["dirigir", "dirige", "dirigieron"]
+            dirigir: ["dirigir", "dirige", "dirigieron"],
+            reconocer: ["reconocer", "reconoció", "reconocen"], 
+            apoyar: ["apoyar", "apoyó", "apoyan"], 
+            decir: ["decir", "dijo", "dicen"], 
+            parecer: ["parecer", "pareció", "parecen"]
         };
         const definitions = {
             amor: "n. 愛情",
@@ -49,75 +53,89 @@
             vista: "n. 視角/看法",
             político: "adj. 政治的",
             respetar: "v. 尊重",
+            conocer: "v. 認識/遇見",
+            subir: "v. 上升/爬",
             escalón: "n. 階梯/台階",
+            llegar: "v. 到達",
             mirador: "n. 觀景台",
             montaña: "n. 山",
+            elefante:"n. 大象；montaña elefante此指「象山」",
             atracción: "n. 景點/吸引物",
             turístico: "adj. 旅遊的",
             capital: "n. 首都",
             ciudad: "n. 城市",
             corazón: "n. 心臟/中心",
+            elevar: "v. 升起/抬高",
             monte: "n. 山丘",
             vista: "n. 景色",
             plano: "n. 畫面/平面",
             rascacielos: "n. 摩天大樓",
-            isla: "n. 島嶼",
+            isla: "n. 島嶼；此借指「臺灣」",
             postal: "n. 明信片/照片",
+            selfi: "n. 自拍",
             álbum: "n. 相簿",
             viaje: "n. 旅行",
-            independencia: "n. 獨立",
-            reunificación: "n. 統一",
-            ejército: "n. 軍隊",
+            creer: "v. 相信",
             invadir: "v. 入侵",
+            ejército: "n. 軍隊",
             pareja: "n. 情侶/伴侶",
             ciudad: "n. 城市",
             provincia: "n. 省份",
+            volver: "v. 返回",
             semana: "n. 星期/週",
             casa: "n. 家",
+            votar: "v. 投票",
             elección: "n. 選舉",
             presidencial: "adj. 總統的",
+            decidir: "v. 決定",
+            acompañar: "v. 陪伴",
+            experiencia: "n. 經驗",
             fiesta: "n. 節慶/派對",
             democracia: "n. 民主",
-            experiencia: "n. 經驗",
-            país: "n. 國家",
-            gobernante: "n. 統治者/領導人",
-            pasión: "n. 熱情",
-            ganador: "n. 贏家",
-            partido: "n. 政黨",
-            festival: "n. 節慶/音樂會",
-            líder: "n. 領袖",
-            continente: "n. 大陸",
-            persona: "n. 人",
-            etnia: "n. 族群",
-            sistema: "n. 系統",
-            país: "n. 國家",
-            oportunidad: "n. 機會",
-            guerra: "n. 戰爭",
-            comida: "n. 食物",
-            idioma: "n. 語言",
-            camino: "n. 路/道路",
-            relación: "n. 關係",
-            posición: "n. 立場/位置",
-            gobierno: "n. 政府",
-            autonomía: "n. 自治",
-            supervisión: "n. 監督",
-            país: "n. 國家",
-            propuesta: "n. 提議",
+            ser: "v. 是",
+            tener: "v. 有",
+            ir: "v. 去",
+            vivir: "v. 生活/居住",
+            trabajar: "v. 工作",
+            sentir: "v. 感覺",
+            compartir: "v. 分享",
+            funcionar: "v. 運作/起作用",
+            entender: "v. 理解",
+            querer: "v. 想要/愛",
+            someter: "v. 征服/使服從",
+            mantener: "v. 維持",
+            juntar: "v. 結合/聚集",
+            destruir: "v. 摧毀",
+            proponer: "v. 提議",
             anexión: "n. 併吞/合併",
             modelo: "n. 模式",
+            adoptar: "v. 採用",
+            arrasar: "v. 摧毀",
             régimen: "n. 政權",
             autoritarismo: "n. 威權主義",
-            calle: "n. 街道",
+            tomar: "v. 拿/採取",
+            reclamar: "v. 要求",
             libertad: "n. 自由",
-            fracaso: "n. 失敗",
-            momento: "n. 時刻",
-            destino: "n. 命運/前途",
-            "status quo": "(拉丁語詞彙)n. 現狀；指的是當前存在的狀態",
+            enseñar: "v. 教導/顯示",
+            continuar: "v. 繼續",
+            comprar: "v. 買/接受(立場)",
+            "status quo": "n. 現狀",
+            reconocer: "v. 承認",
+            apoyar: "v. 支持",
+            decir: "v. 說",
+            parecer: "v. 看起來",
+            continuar: "v. 繼續",
             soberanía: "n. 主權",
-            democracia: "n. 民主",
+            destino: "n. 命運/前途",
             historia: "n. 故事/歷史",
-            amor: "n. 愛情",
-            continuar: "v. 繼續"
+            veinteañeros: "n. 二十多歲的年輕人", 
+            gobernantes: "n. 統治者/領導人（複數）", 
+            sorprendido: "adj. 感到驚訝的", 
+            soberanista: "n. 主權派人士（支持獨立的人）", 
+            sincero: "adj. 真誠的/坦率的", 
+            dirigir: "v. 管理/領導",
+            subraya: "v. 劃線/強調",
+            posición: "n. 立場/位置"
         };
     </script>
     <script src="news.js" defer></script>
@@ -141,23 +159,58 @@
         <div class="sideLeft"></div>
         <div class="center" id="article">
             <div class="textStyle">
-                <p class="subTitle">Lili es taiwanesa y Song es de China. Se conocieron en la universidad y aunque tienen puntos de vista políticos diferentes, ambos se respetan</p>
+                <p class="subTitle">Lili es taiwanesa y Song es de China. Se conocieron en la universidad y aunque
+                    tienen puntos de vista políticos diferentes, ambos se respetan</p>
                 <p style="color: gray;">Actualizado Jueves, 18 enero 2024 - 00:13</p>
-                
+
                 <div class="subTextImg divImg">
-                    <img src="https://phantom-elmundo.unidadeditorial.es/6b9bc181b61060b6639087ed0059d7dd/resize/920/f/webp/assets/multimedia/imagenes/2024/01/17/17055021129966.jpg">
+                    <img
+                        src="https://phantom-elmundo.unidadeditorial.es/6b9bc181b61060b6639087ed0059d7dd/resize/920/f/webp/assets/multimedia/imagenes/2024/01/17/17055021129966.jpg">
                     <p>Lili y Song se hacen un 'selfi' en un famoso mirador de Taipei.L. DE LA CAL</p>
                 </div>
-                <p>Hay que subir 500 escalones para llegar al mirador de la "montaña elefante", como se conoce popularmente a una de las mayores atracciones turísticas de Taipei. En el corazón financiero de la capital taiwanesa se eleva un monte con vistas espectaculares a toda la ciudad, con un buen primer plano del Taipei 101, el rascacielos más famoso de la isla. Esta es la postal más instagrameable.</p>
-                <p>El selfi en el mirador no puede faltar en el álbum del primer viaje juntos a Taipei de Lili y Song. Ella es taiwanesa. Él, de China. Ella es pro independencia. Él, pro reunificación. Ella cree que algún día el ejército chino invadirá Taiwan. Él, también.</p>
-                <p>Esta pareja de veinteañeros se conoció en la universidad de Changsha, una moderna ciudad en la provincia norteña china de Hunan. Lili volvió a casa la semana pasada para poder votar en las elecciones presidenciales del 13 de enero. Song decidió acompañarla.</p>
-                <p>Para ambos fue su primera experiencia dentro de la gran fiesta de la democracia taiwanesa. Lili era la primera vez que votaba. Y para Song era la primera vez que contemplaba en directo cómo un país elije a sus gobernantes.</p>
-                <p>"Me ha sorprendido la pasión con la que la gente vive aquí las elecciones. Fuimos a la fiesta del ganador -el soberanista Lai Ching-te, del Partido Democrático Progresista (PDP)- y era como un mega festival de música", cuenta Song.</p>
-                <p>"Si soy sincero, algún día me gustaría poder votar en el continente (China) por nuestros líderes. Pero Taiwan es una isla muy pequeña, más fácil de dirigir. En China, donde viven más de 1.400 millones de personas y conviven distintas etnias, no funcionaría un sistema democrático. Sería un país ingobernable y caótico", opina este joven.</p>
-                <p>Su pareja, Lili, votó en las elecciones por el Partido Popular de Taiwan (TPP), la tercera fuerza, que atrajo a muchos votantes jóvenes. "Yo me siento taiwanesa, pero amo a China, donde quiero vivir y trabajar porque hay muchas más oportunidades. Aquí nadie quiere una guerra, pero la mayoría de los taiwaneses sentimos que formamos parte de un país independiente y no vamos a renunciar a ello. Compartimos millones de cosas con China, desde la comida hasta el idioma, pero vamos por distintos caminos", dice Lili.</p>
-                <p>"Nuestra relación funciona porque nos respetamos, cada uno entiende la posición del otro. Pero yo tengo claro que Taiwan y China serían mucho más fuertes si estuvieran unidas. El Gobierno chino no quiere someter a Taiwan bajo su sistema. Le dejaría mantener su autonomía, pero siempre bajo una supervisión para que no se junten con aquellos países que quieren destruir China", responde Song.</p>
-                <p>Pekín ha propuesto reiteradas veces a Taipei la anexión completa bajo la fórmula "un país, dos sistemas", el modelo que adoptó Hong Kong y que fue arrasado por el régimen autoritario en cuanto los hongkoneses tomaron las calles para reclamar más libertades y subir su grado de autonomía. "El fracaso de Hong Kong nos enseñó a los taiwaneses que ese modelo no funciona. En este momento, aunque a mí me gustaría una independencia completa, soy feliz si Taiwan continúa siendo el dueño de su destino", subraya Lili.</p>
-                <p>La taiwanesa compra la posición del partido gobernante de la isla de mantener el actual y complejo status quo. Al fin y al cabo, funciona como un país independiente de facto, pero el problema es que su soberanía apenas es reconocida oficialmente, ni siquiera entre las grandes democracias que dicen apoyar las libertades de Taiwan. Haya guerra o paz, lo que parece seguro es que la historia de amor entre Lili y Song continuará a través del estrecho de Formosa.</p>
+                <p>Hay que subir 500 escalones para llegar al mirador de la "montaña elefante", como se conoce
+                    popularmente a una de las mayores atracciones turísticas de Taipei. En el corazón financiero de la
+                    capital taiwanesa se eleva un monte con vistas espectaculares a toda la ciudad, con un buen primer
+                    plano del Taipei 101, el rascacielos más famoso de la isla. Esta es la postal más instagrameable.
+                </p>
+                <p>El selfi en el mirador no puede faltar en el álbum del primer viaje juntos a Taipei de Lili y Song.
+                    Ella es taiwanesa. Él, de China. Ella es pro independencia. Él, pro reunificación. Ella cree que
+                    algún día el ejército chino invadirá Taiwan. Él, también.</p>
+                <p>Esta pareja de veinteañeros se conoció en la universidad de Changsha, una moderna ciudad en la
+                    provincia norteña china de Hunan. Lili volvió a casa la semana pasada para poder votar en
+                    las elecciones presidenciales del 13 de enero. Song decidió acompañarla.</p>
+                <p>Para ambos fue su primera experiencia dentro de la gran fiesta de la democracia taiwanesa. Lili era
+                    la primera vez que votaba. Y para Song era la primera vez que contemplaba en directo cómo un país
+                    elije a sus gobernantes.</p>
+                <p>"Me ha sorprendido la pasión con la que la gente vive aquí las elecciones. Fuimos a la fiesta del
+                    ganador -el soberanista Lai Ching-te, del Partido Democrático Progresista (PDP)- y era como un mega
+                    festival de música", cuenta Song.</p>
+                <p>"Si soy sincero, algún día me gustaría poder votar en el continente (China) por nuestros líderes.
+                    Pero Taiwan es una isla muy pequeña, más fácil de dirigir. En China, donde viven más de 1.400
+                    millones de personas y conviven distintas etnias, no funcionaría un sistema democrático. Sería un
+                    país ingobernable y caótico", opina este joven.</p>
+                <p>Su pareja, Lili, votó en las elecciones por el Partido Popular de Taiwan (TPP), la tercera fuerza,
+                    que atrajo a muchos votantes jóvenes. "Yo me siento taiwanesa, pero amo a China, donde quiero vivir
+                    y trabajar porque hay muchas más oportunidades. Aquí nadie quiere una guerra, pero la mayoría de los
+                    taiwaneses sentimos que formamos parte de un país independiente y no vamos a renunciar a ello.
+                    Compartimos millones de cosas con China, desde la comida hasta el idioma, pero vamos por distintos
+                    caminos", dice Lili.</p>
+                <p>"Nuestra relación funciona porque nos respetamos, cada uno entiende la posición del otro. Pero yo
+                    tengo claro que Taiwan y China serían mucho más fuertes si estuvieran unidas. El Gobierno chino no
+                    quiere someter a Taiwan bajo su sistema. Le dejaría mantener su autonomía, pero siempre bajo una
+                    supervisión para que no se junten con aquellos países que quieren destruir China", responde Song.
+                </p>
+                <p>Pekín ha propuesto reiteradas veces a Taipei la anexión completa bajo la fórmula "un país, dos
+                    sistemas", el modelo que adoptó Hong Kong y que fue arrasado por el régimen autoritario en cuanto
+                    los hongkoneses tomaron las calles para reclamar más libertades y subir su grado de autonomía. "El
+                    fracaso de Hong Kong nos enseñó a los taiwaneses que ese modelo no funciona. En este momento, aunque
+                    a mí me gustaría una independencia completa, soy feliz si Taiwan continúa siendo el dueño de su
+                    destino", subraya Lili.</p>
+                <p>La taiwanesa compra la posición del partido gobernante de la isla de mantener el actual y complejo
+                    status quo. Al fin y al cabo, funciona como un país independiente de facto, pero el problema es que
+                    su soberanía apenas es reconocida oficialmente, ni siquiera entre las grandes democracias que dicen
+                    apoyar las libertades de Taiwan. Haya guerra o paz, lo que parece seguro es que la historia de amor
+                    entre Lili y Song continuará a través del estrecho de Formosa.</p>
             </div>
         </div>
         <div class="sideRight"></div>
