--- a/works/cyberpunk .html
+++ b/works/cyberpunk .html
@@ -184,7 +184,7 @@
             canvas.addEventListener('touchend', () => mouse.down = false);
 
             // Particle system
-            const COUNT = 1000;
+            const COUNT = 3000; //粒子數量
             const particles = new Array(COUNT);
             const targetPoints = new Array(COUNT);
 
